@@ -2,182 +2,98 @@ package Person;
 
 import java.util.*;
 import java.math.*;
+
+import Battle.TypeTable;
+import Cards.Card;
 import Decks.Deck;
 import Items.*;
 
 public class Person {
     private String CharName;
     private int init_card_draw = 2;
+    private double atkMult, defMult;
     private int baseChips, currentChips;
     private List<Card> hand = new ArrayList<>();
-    private Map<Item, Integer> items = new LinkedHashMap<>();
-    
-    public Person(){
-        this.CharName = "Jimbo";
-    }
-    public Person(String s){
-        this.CharName = s;
+    private TypeTable table = new TypeTable();
+    public Person(String charName, int baseChips) {
+        this.CharName = charName;
+        this.baseChips = baseChips;
+        currentChips = baseChips;
+        atkMult = 1;
+        defMult = 1;
     }
 
-    public int getBaseChips(){
+    public double getAtkMult() {
+        return atkMult;
+    }
+
+    public double getDefMult() {
+        return defMult;
+    }
+
+    public String getName() {
+        return CharName;
+    }
+
+    public List<Card> getHand() {
+        return hand;
+    }
+
+    public int getInit_card_draw() {
+        return init_card_draw;
+    }
+
+    public Person(String charName, double atkMult, double defMult, int baseChips) {
+        CharName = charName;
+        this.atkMult = atkMult;
+        this.defMult = defMult;
+        this.baseChips = baseChips;
+        currentChips = baseChips;
+    }
+
+    public int getBaseChips() {
         return baseChips;
     }
 
-    public int getCurrentChips(){
+    public int getCurrentChips() {
         return currentChips;
     }
-    
-    void viewHand(){
-        if (this.hand.isEmpty()){
-            System.out.println(this.CharName + "'s hand is empty");
-        }
-        else{
-            System.out.print(this.CharName + "'s hand: ");
-            for (Card i: hand){
-                if(i.checkFlip()){
-                    System.out.print(i.displayCard() + " ");
-                }
-                else{
-                    i.flip();
-                    System.out.print(i.displayCard() + " ");
-                    i.flip();
-                }
-            }
-            System.out.println();
-        }
 
+    public TypeTable getTable() {
+        return table;
     }
-    
-    void drawFrom(Deck i){
-        if(i.isEmpty()){
+
+    public void drawFrom(Deck i) {
+        if (i.isEmpty()) {
             System.out.println("Uh uh uh, ya can't draw from an empty deck ya know");
-        }
-        else{
+        } else {
             this.hand.add(i.peek());
             i.removeCard(i.peek());
         }
     }
-    
-    void drawXFrom(Deck i, int X){
-        for (int n = 0; n< X; n++){
+
+    public void drawXFrom(Deck i, int X) {
+        for (int n = 0; n < X; n++) {
             drawFrom(i);
         }
     }
 
-    void discardTop(){
-        hand.remove(hand.size() - 1);
+    public void discardTop() {
+        hand.removeLast();
     }
-    
-    void discard(Card c){
+
+    public void discard(Card c) {
         hand.remove(c);
     }
 
-    void addItem(Item z){
-        if(items.containsKey(z)){
-            items.put(z, items.get(z) + 1);
-        }
-        else{
-            items.put(z, 1);
-        }
-    }
-
-    void decreaseItem(Item z){
-        if (items.get(z) == null) return;
-        if(items.get(z) == 1){
-            items.remove(z);
-        else{
-            items.put(z, items.get(z) - 1);
-        }
-    }
-
-    void useItemOnSelf(Item z){
-        if(items.containsKey(z)){
-            z.use(this);
-            decreaseItem(z);
-        }
-        else{
-            System.out.println("What are you trying to do");
-        }
-    }
-
-    void useItemOnDeck(Item z, Deck y){
-        if(items.containsKey(z)){
-            z.use(this, y);
-            decreaseItem(z);
-        }
-        else{
-            System.out.println("What are you trying to do");
-        }
-    }
-
-    void useItemOnCard(Item z, Card x){
-        if(items.containsKey(z)){
-            z.use(this, x);
-            decreaseItem(z);
-        }
-        else{
-            System.out.println("What are you trying to do");
-        }
-    } 
-    
-    void useItemOnTarget(Item z, Person target){
-        if(items.containsKey(z)){
-            z.use(this, target);
-            decreaseItem(z);
-        }
-        else{
-            System.out.println("What are you trying to do");
-        }
-    }
-
-    void useItemOnAll(Item z, Person dealer, Person pot, Deck y){
-        if(items.containsKey(z)){
-            z.use(this, dealer, pot, y);
-            decreaseItem(z);
-        }
-        else{
-            System.out.println("What are you trying to do");
-        }
-    }
-
-
-    void increaseCardDraw(int a){
+    public void changeCardDraw(int a) {
         init_card_draw += a;
     }
 
-    void decreaseCardDraw(int a){
-        init_card_draw -= a;
-    }
-    
-    void healed(int a){
-        currentChips += Math.min(a, baseChips - currentChips);
+    public void changeChips(int a) {
+        if (a>0) currentChips += Math.min(a, baseChips - currentChips);
+        else currentChips = Math.max(currentChips+a, 0);
     }
 
-    void takeDamage(int a){
-        currentChips -= a;
-    }
-    
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
